--- a/client/src/Edit-Profile-Component/EditProfile.css
+++ b/client/src/Edit-Profile-Component/EditProfile.css
@@ -15,23 +15,38 @@
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
 }
 
+.dashboard-container h1 {
+  font-size: 40px;
+  font-weight: 500;
+  margin-bottom: 1.5rem;
+}
+
 .edit-container {
   display: flex;
   gap: 4rem;
 }
 
-.edit-container-pic {
+.edit-profile-pic-button {
+  position: relative;
   width: 300px;
   height: 300px;
   overflow: hidden;
   max-width: 300px;
+  cursor: pointer;
 }
 
-.edit-container-pic img {
+.edit-profile-pic-button img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-
-
-
+.camera-icon {
+  position: absolute;
+  top: 13px;
+  left: 13px;
+  background: rgba(0, 0, 0, 0.6);
+  padding: 12px;
+  border-radius: 50%;
+  color: rgba(255, 255, 255, 0.795);
+  font-size: 1.5rem;
+}
