--- a/client/src/Edit-Profile-Component/EditProfileContainer.css
+++ b/client/src/Edit-Profile-Component/EditProfileContainer.css
@@ -1,4 +1,4 @@
-.edit-profile-container {
+.edit-profile-container form{
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -7,21 +7,11 @@
 .edit-container-info {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 0.5rem;
+  gap: 1.5rem;
   max-width: 800px;
 }
 
-.edit-form-grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1.5rem;
-  max-width: 1000px;
-  padding: 1rem;
-}
-
 .edit-form-group {
-  padding: 0 2rem;
-  margin-right: -2rem;
   display: flex;
   flex-direction: column;
 }
@@ -33,7 +23,6 @@
 
 .edit-form-group input,
 .edit-form-group textarea {
-
   padding: 0.5rem;
   font-size: 1rem;
   border: 1px solid #ccc;
@@ -56,30 +45,44 @@
   align-items: center;
   gap: 1rem;
   justify-content: flex-end;
-
 }
 
-.save-button {
-  display: flex;
-  align-items: center;
-  gap: 0.75rem;
+.edit-profile-buttons {
+  flex: 1;
+  min-width: 80px;
+  max-width: 160px;
+  padding: 0.5rem 1.5rem;
+  text-align: center;
   background-color: black;
   color: white;
-  padding: 0.5rem 1.5rem;
   border: none;
   border-radius: 6px;
   font-size: 14px;
-  cursor: pointer;
   font-weight: 500;
+  cursor: pointer;
   transition: background-color 0.2s, transform 0.1s;
 }
-.save-button:hover {
+.edit-profile-buttons:hover {
   background-color: #313131;
 }
-
-.save-button:active {
+.edit-profile-buttons:disabled {
+  background-color: #7d828a;
+  cursor: default;
+  opacity: 0.7;
+}
+.edit-profile-buttons:active {
   transform: scale(0.96);
 }
+.input-error {
+  border: 2px solid #dc2626;
+}
+
+.input-error-text {
+  color: #dc2626;
+  font-size: 0.875rem;
+  margin-top: 0.25rem;
+}
+
 @media (max-width: 1400px) {
   .edit-container-info {
     grid-template-columns: 1fr;
