--- a/client/src/Edit-Profile-Component/EditProfile.css
+++ b/client/src/Edit-Profile-Component/EditProfile.css
@@ -1,7 +1,7 @@
 .dashboard-wrapper {
   min-height: 100vh;
   padding: 10rem 20rem;
-  background-color: #f9fafb;
+  background-color: #f6f7f8;
 }
 
 .dashboard-container {
@@ -9,9 +9,9 @@
   max-width: 1100px;
   padding: 5rem 6rem;
   margin: 0 auto;
-
   border-radius: 1rem;
   overflow: hidden;
+  background-color: white;
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
 }
 
