--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -2,21 +2,20 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  padding: 10rem 20rem;
   background-color: #f9fafb;
-
+  gap: 1rem;
 }
 
 .main-page-container {
   width: 100%;
   max-width: 1100px;
   margin: 0 auto;
- 
+  margin-top: 5rem;
   border-radius: 1rem;
   overflow: hidden;
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
 }
 
-.main-page-profile{
-    padding: 1rem 3rem;
+.main-page-profile {
+  padding: 1rem 3rem;
 }
